# tech_store

./: .gitignore  Dockerfile  README.md  Tech_shop.postman_collection.json  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
auth/: crud.py  router.py  token.py  utils.py
orders/: crud.py  orders.py  router.py  shema.py
products/: crud.py  model.py  product.py  router.py  schema.py
users/: crud.py  model.py  router.py  schema.py
